# unity_utils

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  tox.ini
.github/workflows/: cicd.yml
requirements/: base.txt  dev.txt  test.txt
scripts/: update_cli_version.py
src/: __init__.py
src/common/: __init__.py
src/common/logging/: __init__.py
tests/: base.py  test_default.py
tests/integration/: __init__.py  base.py  test_init_command.py  test_version.py
tests/unit/: __init__.py  base.py  test_init.py  test_templates.py
unity_utils/: constants.py  entry.py  version.py
unity_utils/commands/: __init__.py  init.py
unity_utils/templates/: __init__.py  gitignore.py  template_factory.py
